<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.GameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryDarkColor"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="13"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_canal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_margin="10dp"
            android:text="@string/canal_age"/>

        <Button
            android:id="@+id/bt_rail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="3"
            android:text="@string/bt_rail_age"/>

    </LinearLayout>

        <ImageView
            android:id="@+id/iv_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitStart"
            android:layout_weight="3"
            android:src="@drawable/a22f_cl"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="13"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_back"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="2"
                android:layout_margin="6dp"
                android:text="@string/back"/>

            <Button
                android:id="@+id/bt_flip"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="6dp"
                android:layout_weight="2"
                android:text="@string/flip"/>

            <Button
                android:id="@+id/bt_next"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="6dp"
                android:layout_weight="2"
                android:text="@string/draw_current"/>

            <Button
                android:id="@+id/bt_top"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="6dp"
                android:layout_weight="2"
                android:visibility="invisible"
                android:text="@string/top"/>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryDarkColor"/>

</FrameLayout>