<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3"
            android:background="@color/primaryDarkColor">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="15dp"
                android:text="@string/presentation"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:text="@string/partner"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@color/primaryLightColor"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_clas"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_margin="15dp"
                android:text="@string/classic"/>

            <Button
                android:id="@+id/bt_comty"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_margin="15dp"
                android:text="@string/comunity"/>

        </LinearLayout>


    </LinearLayout>
</FrameLayout>